--- a/public/homework/2_roster/roster_with_grid_start.html
+++ b/public/homework/2_roster/roster_with_grid_start.html
@@ -109,10 +109,20 @@
   </ul>
   <!-- End of nav <ul> -->
 
-  <img src="logo.jpg">
-  <h1>First Draft: Beginner Focused Web Development</h1>
+<div class="container">
+  <div class="row">
+    <div class"col-md-12">
 
-  <div class="card">
+  <h1>
+      <img src="logo.jpg" height="40">
+      First Draft: Beginner Focused Web Development
+      </h1>
+    </div>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <div class="card">
     <h2>Instructors</h2>
 
     <ul>
@@ -126,8 +136,10 @@
       </li>
     </ul>
   </div>
+  </div>
 
-  <div class="card">
+  <div class="col-md-4">
+    <div class="card">
     <h2>Students</h2>
 
     <ul>
@@ -153,16 +165,20 @@
       <li>Dixie Bradtke</li>
     </ul>
   </div>
+  </div>
 
-
-  <div class="card">
+  <div class="col-md-4">
+    <div class="card">
     <h2>Resources</h2>
 
-    <ul>
+      <ul>
       <li><a href="https://github.com/firstdraft" target="_blank">Course GitHub page</a></li>
       <li><a href="http://ask.firstdraft.com" target="_blank">Course forum</a></li>
       <li><a href="http://firstdraft.github.io/syllabus/" target="_blank">Course syllabus</a></li>
-    </ul>
+      </ul>
+      </div>
+    </div>
   </div>
+</div>
 </body>
 </html>
